# hARMful

./: .gitignore  .gitmodules  README.md  circle.yml
Libraries/: CMakeLists.txt  README.md  TODOList  build.sh
Libraries/BANEful/include/: BANEStrings.hpp
Libraries/BANEful/src/: BANEStrings.cpp
Libraries/DISDAINful/: Makefile  README.md
Libraries/DISDAINful/include/: AllMagic.h  AllWeapons.h
Libraries/DISDAINful/include/characters/: Character.h  ColonyStrategy.h  Status.h
Libraries/DISDAINful/include/equipment/: ItemStatus.h
Libraries/DISDAINful/include/harmful/: ai.h  armors.h  items.h  magic.h  patterns.h  utils.h  weapons.h
Libraries/DISDAINful/include/magic/: BlackMagic.h  MagicEffect.h
Libraries/DISDAINful/include/utils/: GaugeTimer.h  Timer.h
Libraries/DISDAINful/lib/: file.info
Libraries/DISDAINful/src/: AllMagic.cpp  AllPotions.cpp  AllPotions.h  AllWeapons.cpp  hARMful.cpp  hARMful.h  makefile
Libraries/DISDAINful/src/characters/: Character.cpp  ColonyData.cpp  ColonyData.h  ColonyManager.cpp  ColonyManager.h  ColonyStrategy.cpp  Statistics.cpp  Statistics.h  Status.cpp  makefile
Libraries/DISDAINful/src/equipment/: Item.cpp  Item.h  ItemStatus.cpp  makefile
Libraries/DISDAINful/src/magic/: BlackMagic.cpp  Magic.cpp  Magic.h  MagicEffect.cpp  MagicElement.cpp  MagicElement.h  WhiteMagic.cpp  WhiteMagic.h  makefile
Libraries/DISDAINful/src/pattern/: makefile
Libraries/DISDAINful/src/utils/: GaugeTimer.cpp  LogGen.cpp  LogGen.h  Timer.cpp  makefile
Libraries/DOOMful/: CHANGES  CMakeLists.txt  CONTINUE  Makefile
Libraries/DOOMful/include/: DOOMStrings.h  DOOMStrings.hpp  DOOMful.h  Platform.h  Types.h
Libraries/DOOMful/include/debug/: ErrorsManagement.hpp  Log.h  Print.h  Test.h
Libraries/DOOMful/include/exceptions/: ArrayOutOfBoundException.h  Exception.h  ExceptionSkeleton.h  FactoryUnableToCreateInstanceException.h  IOException.h  InvalidArraySizeException.h  NULLPointerException.h  NotImplementedException.h  UnexpectedValueException.h
Libraries/DOOMful/include/interfaces/: IClearable.h
Libraries/DOOMful/include/utils/: AlignedArray.h  Array.h  CallStack.h  Chrono.hpp  Console.h  DefragmentedList.h  IDObject.hpp  LogSystem.hpp  Mutex.h  PairList.h  Platform.hpp  Processor.h  Profiler.h  Profiler.hpp  Random.h  Random.hpp  SizedStack.h  String.h  StringExt.hpp  Thread.h  ThreadManager.h  Time.h  Time.hpp  Translation.hpp  Utils.hpp
Libraries/DOOMful/lib/: Infos.dir
Libraries/DOOMful/lib/Debug/: DOOM.exp
Libraries/DOOMful/src/: DOOMStrings.cpp
Libraries/DOOMful/src/debug/: ErrorsManagement.cpp  Log.cpp  Test.c
Libraries/DOOMful/src/exceptions/: ArrayOutOfBoundException.cpp  Exception.cpp  FactoryUnableToCreateInstanceException.cpp  IOException.cpp  InvalidArraySizeException.cpp  NULLPointerException.cpp  NotImplementedException.cpp  UnexpectedValueException.cpp
Libraries/DOOMful/src/utils/: CallStack.cpp  Chrono.cpp  Console.cpp  IDObject.cpp  LogSystem.cpp  Mutex.cpp  Processor.cpp  Profiler.cpp  Random.cpp  SizedStack.cpp  String.cpp  StringExt.cpp  ThreadManager.cpp  Time.cpp  Translation.cpp
Libraries/DOOMful/test/: Makefile  Threads.cpp
Libraries/GUILEful/: CHANGES  Makefile
Libraries/GUILEful/include/: GUIElements.h  GUILEStrings.h  GUILayouts.h  GUITypes.h
Libraries/GUILEful/include/elements/: GUIButton.h  GUIElement.h  GUILabel.h  GUIPanel.h  GUISeparator.h  GUITabbedElement.h  GUIToolBar.h
Libraries/GUILEful/include/layouts/: GUIBaseLayout.h  GUIGridLayout.h  GUIHorizontalListLayout.h  GUILayoutTypes.h  GUIListLayout.h  GUIVerticalListLayout.h
Libraries/GUILEful/src/: GUILEStrings.cpp
Libraries/GUILEful/src/elements/: GUIButton.cpp  GUIElement.cpp  GUILabel.cpp  GUIPanel.cpp  GUISeparator.cpp  GUITabbedElement.cpp  GUIToolBar.cpp
Libraries/GUILEful/src/layouts/: GUIBaseLayout.cpp  GUIGridLayout.cpp  GUIHorizontalListLayout.cpp  GUIListLayout.cpp  GUIVerticalListLayout.cpp
Libraries/HOPEful/include/: HOPEStrings.hpp  HopeAPI.hpp
Libraries/HOPEful/include/API/: OGL3.hpp
Libraries/HOPEful/include/OGL/: GLOptions.hpp  GLWindow.hpp
Libraries/HOPEful/include/interfaces/: IRenderable.hpp
Libraries/HOPEful/include/ogl/: GLOptions.hpp  GLWindow.hpp  Options.hpp
Libraries/HOPEful/include/resources/: BrdfLUT.hpp
Libraries/HOPEful/include/scene/: Component.hpp  Entity.hpp  FrameGraphNode.hpp  Node.hpp  Scene.hpp  SceneCache.hpp  SceneRenderData.hpp  SceneTypes.hpp  Transform.hpp
Libraries/HOPEful/shaders/: amount_lights.inc
Libraries/HOPEful/src/: HOPEStrings.cpp
Libraries/HOPEful/src/OGL/: GLOptions.cpp  GLWindow.cpp
Libraries/HOPEful/src/ogl/: GLOptions.cpp  GLWindow.cpp  Options.cpp  Window.cpp
Libraries/HOPEful/src/resources/: BrdfLUT.cpp
Libraries/HOPEful/src/scene/: Component.cpp  Entity.cpp  FrameGraphNode.cpp  Node.cpp  Scene.cpp  (+4 more)
Libraries/MINDful/: CHANGES  Makefile
Libraries/MINDful/include/: FastMath.h  FastMath.hpp  Geometry.h  MIND.h  MINDOptions.h  MINDOptions.hpp  MINDStrings.h  MINDTypes.h  MINDTypes.hpp  Math.h  Math.hpp
Libraries/MINDful/src/: FastMath.cpp  MINDStrings.cpp  Math.cpp
Libraries/MINDful/test/: Makefile  dimension2d.cpp  dimension3d.cpp  fast_math.cpp  line2d.cpp  math.cpp  matrix2d.cpp  matrix3x3.cpp  matrix4x4.cpp  point2d.cpp  point3d.cpp  rectangle2d.cpp  simd_emulated.cpp  simd_intel.cpp
Libraries/SINful/common/: Makefile
Libraries/SPITEful/: CHANGES  ISSUES  Makefile  build.sh
Libraries/SPITEful/include/: File.h  File.hpp  Path.h  Path.hpp  SPITEStrings.h  SPITEStrings.hpp
Libraries/SPITEful/src/: File.cpp  Path.cpp  SPITEStrings.cpp
Libraries/SPITEful/test/: Makefile  path.cpp
Softwares/Tests/DOOMful/: CMakeLists.txt
Softwares/Tests/HOPEful/: CMakeLists.txt
Softwares/Tests/MINDful/: CMakeLists.txt
Softwares/Tests/SPITEful/: CMakeLists.txt
UnitTests/: CMakeLists.txt  Makefile  RunTests.sh
UnitTests/Common/include/: UnitTest.hpp
UnitTests/Common/src/: UnitTest.cpp
UnitTests/DOOMful/src/: main.cpp
UnitTests/HOPEful/src/: main.cpp
UnitTests/MINDful/src/: main.cpp
UnitTests/include/: mock_assert.h  test_float.h
(+1358 files in other folders)
